# app/Models/Servicios.php
@@ -9,9 +9,19 @@ class Servicios extends Model
 {
     use HasFactory;
 
+
+    public function scopeNombre($query, $nombre = null, $paginacion = null)
+    {
+        if (!empty($nombre)) {
+            $query->where('nombre', 'like', '%' . $nombre . '%');
+        }
+
+        return $query->paginate($paginacion ?? env('PAGINAR'));
+    }
     // Debe coincidir con el nombre de la relación en el modelo Clientes
     public function clientes()
     {
         return $this->hasMany(Clientes::class, 'servicios_id', 'id');
     }
+
 }
